# IR-26-1-archive

./: .gitignore  LICENSE  README.md
autonomous_parking/: CMakeLists.txt  package.xml
autonomous_parking/config/: slot_metadata.yaml
autonomous_parking/launch/: parking_world.launch.py
autonomous_parking/models/isa_marker/: model.config
autonomous_parking/models/isa_marker/isa_marker_model/: model.sdf
autonomous_parking/models/isa_marker/materials/scripts/: isa_marker.material
autonomous_parking/worlds/: parking_lot.world
src/01_basics/: README.md  package.xml  setup.cfg  setup.py
src/01_basics/basics/: lecture.md  listener.py  talker.py
src/01_basics/launch/: talker_listener.launch.py
src/02_robot_description/: README.md  package.xml  setup.py
src/02_robot_description/launch/: display_mobile_robot.launch.py  display_rrbot.launch.py  display_two_r_robot.launch.py
src/02_robot_description/rviz/: display_robot.rviz  mobile_robot.rviz  two_r_robot.rviz
src/02_robot_description/urdf/: mobile_robot.urdf  two_r_robot.urdf
src/03_gazebo_simulation/: README.md  package.xml  setup.py
src/03_gazebo_simulation/config/: display_robot.rviz  mobile_robot.rviz  mobile_robot_controllers.yaml  rrbot_controllers.yaml
src/03_gazebo_simulation/gazebo_simulation/: cmd_vel_publisher.py  trajectory_publisher.py
src/03_gazebo_simulation/launch/: bringup_mobile_robot.launch.py  bringup_rrbot.launch.py  control_mobile_robot.launch.py  control_rrbot.launch.py  sim_empty_world.launch.py  sim_mobile_robot.launch.py  sim_rrbot.launch.py
src/03_gazebo_simulation/urdf/: mobile_robot.urdf  rrbot.urdf
src/03_gazebo_simulation/worlds/: empty.sdf  mobile_robot.sdf
src/my_first_pkg/: package.xml  setup.py
