<?xml version="1.0"?>
<package format="3">
  <name>autonomous_parking</name>
  <version>0.0.1</version>
  <description>ROS2 기반 자율 주차 시뮬레이션</description>
  <maintainer email="estelle0329@ewha.ac.kr">yoonji</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
