<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_simulation</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for 2R robot and mobile robot</description>
  <maintainer email="songd@ewha.ac.kr">Daeun Song</maintainer>
  <license>Apache-2.0</license>

  <!-- Python node -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <!-- Robot description -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Gazebo Classic -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <!-- Gazebo Fortress -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- ros2_control controllers -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
